<resources>
    <string name="app_name">Honey I\'m Home!</string>
    <string name="start_tracking">start tracking location</string>
    <string name="stop_tracking">stop tracking</string>
    <string name="location_rational">
        We need location permission in order to know how close you are to your home!
    </string>
    <string name="sms_rational">
        This app cannot send sms to your Honey without this permission!
    </string>
    <string name="latitude">Latitude: </string>
    <string name="longitude">Longitude: </string>
    <string name="accuracy">Accuracy: </string>
    <string name="test_sms">Test SMS: </string>
    <string name="home">Your home location is defined as (%1$f, %2$f) </string>
    <string name="open_location_settings">\"open location settings\"</string>
    <string name="gps_network_not_enabled">GPS network not enabled!</string>
    <string name="Cancel">Cancel</string>
    <string name="channel_name">sms notifications</string>
    <string name="channel_description">notifications regarding sms messages</string>
    <string name="set_number">set SMS phone number</string>
    <string name="set_location_as_home">set location as home</string>
    <string name="clear_home">clear home</string>
    <string name="message_content">Honey I\'m Sending a Test Message!</string>
    <string name="delete_phone_number">Delete phone number</string>
    <string name="home_message">Honey I\'m Home!</string>


</resources>
