<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <Button
        android:id="@+id/clear_home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_home"
        app:layout_constraintBottom_toTopOf="@+id/set_home_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accuracy_textView"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/set_home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_location_as_home"
        app:layout_constraintBottom_toTopOf="@+id/Start_tracking_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Start_tracking_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_tracking"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.809" />

    <Button
        android:id="@+id/set_number_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Start_tracking_button" />

    <Button
        android:id="@+id/delete_phone_number_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_phone_number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Start_tracking_button"
        app:layout_constraintTop_toBottomOf="@+id/home_textView" />

    <Button
        android:id="@+id/test_sms_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_sms"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.322"
        app:layout_constraintStart_toEndOf="@+id/set_number_button"
        app:layout_constraintTop_toBottomOf="@+id/Start_tracking_button"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/latitude_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/latitude"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/longitude_textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="78dp" />

    <TextView
        android:id="@+id/longitude_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/longitude"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/accuracy_textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.647"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/accuracy_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accuracy"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/set_home_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/home_textView"
        android:layout_width="378dp"
        android:layout_height="25dp"
        android:text="@string/home"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/Start_tracking_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accuracy_textView"
        app:layout_constraintVertical_bias="0.254" />

</androidx.constraintlayout.widget.ConstraintLayout>